add acceptance test for centreon backuo

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -62,3 +62,8 @@ default:
       paths: [ %paths.base%/features/DisableFieldsOnBlockedObjects.feature ]
       contexts:
         - DisableFieldsOnBlockedObjectsContext
+
+    backup:
+          paths: [ %paths.base%/features/Backup.feature ]
+          contexts:
+            - BackupContext
