--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -19,12 +19,10 @@
         "behat/behat": "^3.0",
         "behat/mink": "^1.7",
         "phpunit/phpunit": "^4.8",
+        "squizlabs/php_codesniffer": "^2.5",
         "phing/phing": "^2.13",
         "behat/mink-extension": "^2.1",
         "behat/mink-selenium2-driver": "^1.3",
         "centreon/centreon-test-lib": "dev-master"
-    },
-    "require": {
-        "squizlabs/php_codesniffer": "3.0.0a1"
     }
 }
