#MON-943 host template search acceptance

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -86,3 +86,8 @@ default:
       paths: [ %paths.base%/features/DowntimeService.feature ]
       contexts:
         - DowntimeServiceContext
+
+    save_search_filter:
+      paths: [ %paths.base%/features/SaveSearchFilter.feature ]
+      contexts:
+        - SaveSearchFilterContext
