#MON-910 : add acceptance tests

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -86,3 +86,8 @@ default:
       paths: [ %paths.base%/features/DowntimeService.feature ]
       contexts:
         - DowntimeServiceContext
+
+    show_disabled_hosts_services:
+          paths: [ %paths.base%/features/ShowDisabledHostsServices.feature ]
+          contexts:
+            - ShowDisabledHostsServicesContext
