* Acceptance tests for command agruments in host page (service page is using XSLT so it can' be done)

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -114,4 +114,8 @@ default:
       paths: [ %paths.base%/features/DowntimeStartAndStop.feature ]
       contexts:
        - DowntimeStartAndStopContext
-
+       
+    command_arguments:
+      paths: [ %paths.base%/features/CommandArguments.feature ]
+      contexts:
+       - CommandArgumentsContext
