Update Jenkinsfile source stage.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -1,7 +1,9 @@
 stage('Source') {
   node {
     sh 'cd /opt/centreon-build && git pull && cd -'
-    scm checkout
+    dir('centreon-web') {
+      checkout scm
+    }
     sh '/opt/centreon-build/jobs/web/pipeline/mon-web-source.sh'
     def source = readProperties file: 'source.properties'
     env.VERSION = "${source.VERSION}"
