--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -5,7 +5,7 @@ stage('Source') {
       checkout scm
     }
     sh '/opt/centreon-build/jobs/web/pipeline/mon-web-source.sh'
-    def source = readProperties file: 'source.properties'
+    source = readProperties file: 'source.properties'
     env.VERSION = "${source.VERSION}"
     env.RELEASE = "${source.RELEASE}"
   }
