--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -115,3 +115,12 @@ default:
       contexts:
        - DowntimeStartAndStopContext
 
+    autologin:
+      paths: [ %paths.base%/features/Autologin.feature ]
+      contexts:
+       - AutologinContext
+
+    ldap:
+      paths: [ %paths.base%/features/Ldap.feature ]
+      contexts:
+      - LdapContext
