Use delta values to compute new style violations in Jenkinsfile.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -27,6 +27,7 @@ try {
           $class: 'hudson.plugins.checkstyle.CheckStylePublisher',
           pattern: '**/codestyle.xml',
           usePreviousBuildAsReference: true,
+          useDeltaValues: true,
           failedNewAll: '0'
         ])
       }
