--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -134,3 +134,9 @@ default:
       paths: [ %paths.base%/features/CustomViews.feature ]
       contexts:
       - CustomViewsContext
+    
+    customizable_shared_custom_views:
+      paths: [ %paths.base%/features/CustomizableSharedCustomViews.feature ]
+      contexts:
+      - CustomizableSharedCustomViewsContext
+      
