add acceptance test for parent host template configuration

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -143,3 +143,8 @@ default:
       paths: [ %paths.base%/features/CustomViews.feature ]
       contexts:
       - CustomViewsContext
+
+    host_template_configuration:
+      paths: [ %paths.base%/features/HostTemplateConfiguration.feature ]
+      contexts:
+      - HostTemplateConfigurationContext
