Disable packagist.org in composer.json.

--- a/centreon/composer.json
+++ b/centreon/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "repositories": [
+      { "packagist.org": false },
       { "type": "composer", "url": "http://ci.int.centreon.com" }
     ],
     "config": {
