add acceptance tests for widgets install/remove

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -153,3 +153,8 @@ default:
       paths: [ %paths.base%/features/Module.feature ]
       contexts:
       - ModuleContext
+
+    widget:
+      paths: [ %paths.base%/features/Widget.feature ]
+      contexts:
+      - WidgetContext
