Retrieve unit test results in Jenkinsfile.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -17,6 +17,14 @@ try {
       node {
         sh 'cd /opt/centreon-build && git pull && cd -'
         sh '/opt/centreon-build/jobs/web/dev/mon-web-unittest.sh centos6'
+        step([
+          $class: 'XUnitBuilder',
+          thresholds: [
+            [$class: 'FailedThreshold', failureThreshold: '0'],
+            [$class: 'SkippedThreshold', failureThreshold: '0']
+          ],
+          tools: [[$class: 'PHPUnitJunitHudsonTestType', pattern: 'ut.xml']]
+        ])
       }
     },
     'centos7': {
@@ -24,8 +32,21 @@ try {
         sh 'cd /opt/centreon-build && git pull && cd -'
         sh '/opt/centreon-build/jobs/web/dev/mon-web-unittest.sh centos7'
         step([
+          $class: 'XUnitBuilder',
+          thresholds: [
+            [$class: 'FailedThreshold', failureThreshold: '0'],
+            [$class: 'SkippedThreshold', failureThreshold: '0']
+          ],
+          tools: [[$class: 'PHPUnitJunitHudsonTestType', pattern: 'ut.xml']]
+        ])
+        step([
+          $class: 'CloverPublisher',
+          cloverReportDir: '.',
+          cloverReportFileName: 'coverage.xml'
+        ])
+        step([
           $class: 'hudson.plugins.checkstyle.CheckStylePublisher',
-          pattern: '**/codestyle.xml',
+          pattern: 'codestyle.xml',
           usePreviousBuildAsReference: true,
           useDeltaValues: true,
           failedNewAll: '0'
