Special characters in contact (#5359)
* SpecialCharactersInContact config added

* SpecialCharactersInContact.feature added

* features/bootstrap/SpecialCharactersInContact acceptance test

* * Change private properties to protected in SpecialCharactersInContactContext class
* Update gitignore file

* theNewRecordIsDisplayedInTheUsersListWithTheNewAliasValue function updated

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -163,3 +163,8 @@ default:
       paths: [ %paths.base%/features/RestApi.feature ]
       contexts:
       - RestApiContext
+      
+    special_characters_in_contact:
+      paths: [ %paths.base%/features/SpecialCharactersInContact.feature ]
+      contexts:
+      - SpecialCharactersInContactContext
