--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -168,3 +168,8 @@ default:
       paths: [ %paths.base%/features/SpecialCharactersInContact.feature ]
       contexts:
       - SpecialCharactersInContactContext
+
+    host_configuration:
+      paths: [ %paths.base%/features/HostConfiguration.feature ]
+      contexts:
+      - HostConfigurationContext
