Acceptance test for Ldap configuration (#5373)
* SpecialCharactersInContact config added

* SpecialCharactersInContact.feature added

* features/bootstrap/SpecialCharactersInContact acceptance test

* * Change private properties to protected in SpecialCharactersInContactContext class
* Update gitignore file

* theNewRecordIsDisplayedInTheUsersListWithTheNewAliasValue function updated

* configurationPage initial scrypt

* LdapConfiguration added in behat.yml

* LdapConfiguration feature created

* LdapConfigurationContext acceptance test added

* nothing changed

* LdapConfigurationContext implemented with basics properties

*  LdapConfiguration.feature updated

* methods changed related to the updated feature

* indentation udpdated

* LdapConfiguration test completed

* conditions added if modifications are correct

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -173,3 +173,8 @@ default:
       paths: [ %paths.base%/features/HostConfiguration.feature ]
       contexts:
       - HostConfigurationContext
+      
+    ldap_configuration:
+      paths: [ %paths.base%/features/LdapConfiguration.feature ]
+      contexts:
+      - LdapConfigurationContext
