ContactConfiguration is added (#5364)
* ContactConfiguration is added

* All the tests gathered in one scenario

* Every Property on ContactConfigurationListingPage are verified

* The 'add' were deleted

* unused variables deleted

* The test for timperiod is fixed

* Fix indentation in contactconfigurationcontext

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -169,6 +169,11 @@ default:
       contexts:
       - SpecialCharactersInContactContext
 
+    contact_configuration:
+      paths: [ %paths.base%/features/ContactConfiguration.feature ]
+      contexts:
+      - ContactConfigurationContext
+
     host_creation_duplication:
       paths: [ %paths.base%/features/HostCreationDuplication.feature ]
       contexts:
