Revert "Retrieve API test reports in HTML."
This reverts commit fb89f2302b725df61662d7c32e72efacbdc82f22.

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -107,7 +107,7 @@ try {
           ],
           tools: [[$class: 'JUnitType', pattern: 'xunit-reports/**/*.xml']]
         ])
-        archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png, acceptance-logs/*.html'
+        archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png'
       }
     },
     'centos7': {
@@ -122,7 +122,7 @@ try {
           ],
           tools: [[$class: 'JUnitType', pattern: 'xunit-reports/**/*.xml']]
         ])
-        archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png, acceptance-logs/*.html'
+        archiveArtifacts allowEmptyArchive: true, artifacts: 'acceptance-logs/*.txt, acceptance-logs/*.png'
       }
     }
     if ((currentBuild.result ?: 'SUCCESS') != 'SUCCESS') {
