Acceptance test to check login (#5393)
* SpecialCharactersInContact config added

* SpecialCharactersInContact.feature added

* features/bootstrap/SpecialCharactersInContact acceptance test

* * Change private properties to protected in SpecialCharactersInContactContext class
* Update gitignore file

* theNewRecordIsDisplayedInTheUsersListWithTheNewAliasValue function updated

* configurationPage initial scrypt

* LdapConfiguration added in behat.yml

* LdapConfiguration feature created

* LdapConfigurationContext acceptance test added

* nothing changed

* LdapConfigurationContext implemented with basics properties

*  LdapConfiguration.feature updated

* methods changed related to the updated feature

* indentation udpdated

* LdapConfiguration test completed

* conditions added if modifications are correct

* ControlLogin acceptance test added into behat.yml

* acceptance test ControlLogin implemented

* improve acceptance test to check login

* update error message for login check

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -198,3 +198,8 @@ default:
       paths: [ %paths.base%/features/LdapConfiguration.feature ]
       contexts:
       - LdapConfigurationContext
+
+    control_login:
+      paths: [ %paths.base%/features/ControlLogin.feature ]
+      contexts:
+      - ControlLoginContext
