Ldap manual import (#5381)
* ldapLDAPManualImport config added into behat.yml

* LdapManualImport and LdapManualImportContext.php.feature files for acceptance test added

* feature's background modified

* LdapManualImportContext.php accpetance test ok

* LdapManuelImport acceptance test enhanced

* UtilsContext Class withdrawn

* features's name modified

* improve acceptance test for ldap manual import

* improve ldap manual import acceptance test

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -198,6 +198,11 @@ default:
       paths: [ %paths.base%/features/LdapConfiguration.feature ]
       contexts:
       - LdapConfigurationContext
+      
+    ldap_manual_import:
+      paths: [ %paths.base%/features/LdapManualImport.feature ]
+      contexts:
+      - LdapManualImportContext
 
     control_login:
       paths: [ %paths.base%/features/ControlLogin.feature ]
