NonAdmincontactCreation script added (#5365)
* ContactConfiguration is added

* adding NonAdminContactCreation script

* NonAdminContactCreationContext Corrected

* Unused variables deleted

* Contact Configuration updated

* Everything put together in one scenario

* New php for one scenario

* Updated NonAdminContact

* ContactConfiguration is the merged one

* Spin changed

Only wait 5 seconds

* Update ContactConfiguration.feature

* * fix style

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -193,12 +193,12 @@ default:
       paths: [ %paths.base%/features/ContactGroupCreationDuplication.feature ]
       contexts:
       - ContactGroupCreationDuplicationContext
-      
+
     ldap_configuration:
       paths: [ %paths.base%/features/LdapConfiguration.feature ]
       contexts:
       - LdapConfigurationContext
-      
+
     ldap_manual_import:
       paths: [ %paths.base%/features/LdapManualImport.feature ]
       contexts:
@@ -213,3 +213,8 @@ default:
       paths: [ %paths.base%/features/ACLMenusAccess.feature ]
       contexts:
       - ACLMenusAccessContext
+
+    non_admin_contact_creation:
+      paths: [ %paths.base%/features/NonAdminContactCreation.feature ]
+      contexts:
+      - NonAdminContactCreationContext
