Add acceptance test Modify_Default_Page_Connection (#5382)
* Feature and php file added

* Update behat.yml

* Update and rename ModifyDefaultPageConnexion.feature to ModifyDefaultPageConnection.feature

* Rename ModifyDefaultPageConnexionContext.php to ModifyDefaultPageConnectionContext.php

* Update ModifyDefaultPageConnectionContext.php

* Update ModifyDefaultPageConnection.feature

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -204,6 +204,11 @@ default:
       contexts:
       - LdapManualImportContext
 
+    modify_default_page_connexion:
+      paths: [ %paths.base%/features/ModifyDefaultPageConnection.feature ]
+      contexts:
+      - ModifyDefaultPageConnectionContext
+
     control_login:
       paths: [ %paths.base%/features/ControlLogin.feature ]
       contexts:
