Feature ACLActionAccess created (#5432)
* Feature created

* * fix style

* Duplicates have been removed

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -223,3 +223,8 @@ default:
       paths: [ %paths.base%/features/NonAdminContactCreation.feature ]
       contexts:
       - NonAdminContactCreationContext
+
+    acl_actions_access:
+      paths: [ %paths.base%/features/ACLActionsAccess.feature ]
+      contexts:
+      - ACLActionsAccessContext
