New Feature ACLResourcesAccess (#5422)
* New Feature ACLResourcesAccess

* * fix style

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -224,6 +224,11 @@ default:
       contexts:
       - ACLMenusAccessContext
 
+    acl_resources_access:
+      paths: [ %paths.base%/features/ACLResourcesAccess.feature ]
+      contexts:
+      - ACLResourcesAccessContext
+
     non_admin_contact_creation:
       paths: [ %paths.base%/features/NonAdminContactCreation.feature ]
       contexts:
