Acl access groups (#5404)
* AclAccessGroups configured in behat.yml

* AclAccessGroups acceptance test initialized

* AclAccessGroups acceptance test

* put clipboard on app head and remove old lib tool.js

* * fix style

* method iAddANewAccessGroupWithLinkedContactGroup() updated

*move js

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -219,6 +219,11 @@ default:
       contexts:
       - ControlLoginContext
 
+    acl_access_groups:
+      paths: [ %paths.base%/features/AclAccessGroups.feature ]
+      contexts:
+      - AclAccessGroupsContext
+
     acl_menus_access:
       paths: [ %paths.base%/features/ACLMenusAccess.feature ]
       contexts:
