--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -189,6 +189,11 @@ default:
       contexts:
       - HostConfigurationContext
 
+    contact_group_configuration:
+      paths: [ %paths.base%/features/ContactGroupConfiguration.feature ]
+      contexts:
+      - ContactGroupConfigurationContext
+
     host_duplication_check:
       paths: [ %paths.base%/features/HostDuplicationCheck.feature ]
       contexts:
