New Feature MassiveChangeHost (#5452)
* Feature created

* * fix style

* Test completed

* * add recovery notification delay in massive change #5451

* Delete vrml_image

* * dont delete empty input

* * fix style

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -258,3 +258,8 @@ default:
       paths: [ %paths.base%/features/TimePeriodConfiguration.feature ]
       contexts:
       - TimePeriodConfigurationContext
+
+    massive_change_hosts:
+      paths: [ %paths.base%/features/MassiveChangeHosts.feature ]
+      contexts:
+      - MassiveChangeHostsContext
