New Feature created: MassiveChangeServices (#5457)
* New Feature created

* File cleaned

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -268,3 +268,8 @@ default:
       paths: [ %paths.base%/features/MassiveChangeHosts.feature ]
       contexts:
       - MassiveChangeHostsContext
+
+    massive_change_services:
+      paths: [ %paths.base%/features/MassiveChangeServices.feature ]
+      contexts:
+      - MassiveChangeServicesContext
