--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -273,3 +273,8 @@ default:
       paths: [ %paths.base%/features/MassiveChangeServices.feature ]
       contexts:
       - MassiveChangeServicesContext
+      
+    virtual_metric_handle:
+      paths: [ %paths.base%/features/VirtualMetricHandle.feature ]
+      contexts:
+      - VirtualMetricHandleContext
