--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -184,10 +184,15 @@ default:
       contexts:
       - HostConfigurationContext
 
-    host_category:
+    host_category_configuration:
       paths: [ %paths.base%/features/HostCategoryConfiguration.feature ]
       contexts:
       - HostCategoryConfigurationContext
+
+    host_group_configuration:
+      paths: [ %paths.base%/features/HostGroupConfiguration.feature ]
+      contexts:
+      - HostGroupConfigurationContext
 
     contact_group_configuration:
       paths: [ %paths.base%/features/ContactGroupConfiguration.feature ]
