improve coding style of jenkinsfile

--- a/centreon/Jenkinsfile
+++ b/centreon/Jenkinsfile
@@ -170,6 +170,10 @@ try {
   }
 } catch(e) {
   if (env.BRANCH_NAME == 'master') {
-    slackSend channel: "#monitoring-metrology", color: "#F30031", message: "*FAILURE*: `CENTREON WEB` <${env.BUILD_URL}|build #${env.BUILD_NUMBER}> on branch ${env.BRANCH_NAME}\n*COMMIT*: <https://github.com/centreon/centreon/commit/${source.COMMIT}|here> by ${source.COMMITTER}\n*INFO*: ${e}"
+    slackSend channel: "#monitoring-metrology",
+        color: "#F30031",
+        message: "*FAILURE*: `CENTREON WEB` <${env.BUILD_URL}|build #${env.BUILD_NUMBER}> on branch ${env.BRANCH_NAME}\n" +
+            "*COMMIT*: <https://github.com/centreon/centreon/commit/${source.COMMIT}|here> by ${source.COMMITTER}\n" +
+            "*INFO*: ${e}"
   }
 }
