New feature HostGroupServiceConfiguration (#5488)
* New feature HostGroupServiceConfiguration

* Features fixed

* File fixed

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -273,3 +273,8 @@ default:
       paths: [ %paths.base%/features/VirtualMetricHandle.feature ]
       contexts:
       - VirtualMetricHandleContext
+
+    host_group_service_configuration:
+      paths: [ %paths.base%/features/HostGroupServiceConfiguration.feature ]
+      contexts:
+      - HostGroupServiceConfigurationContext
