--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -279,6 +279,11 @@ default:
       contexts:
       - CommandConfigurationContext
 
+    service_group_configuration:
+      paths: [ %paths.base%/features/ServiceGroupConfiguration.feature ]
+      contexts:
+      - ServiceGroupConfigurationContext
+
     host_group_service_configuration:
       paths: [ %paths.base%/features/HostGroupServiceConfiguration.feature ]
       contexts:
