avoid check style error with namespaces

--- a/centreon/build.xml
+++ b/centreon/build.xml
@@ -26,18 +26,18 @@
   </target>
 
   <target name="codestyle" depends="prepare">
-    <phpcodesniffer standard="PSR2">
+    <phpcodesniffer standard="codingstyle.xml">
       <formatter type="checkstyle" outfile="${builddir}/checkstyle.xml"/>
       <fileset dir="features">
-	<include name="**/*.php"/>
+        <include name="**/*.php"/>
       </fileset>
       <fileset dir="tests">
-	<include name="**/*.php"/>
+        <include name="**/*.php"/>
       </fileset>
       <fileset dir="www">
         <include name="**/*.php"/>
-	<exclude name="lib/HTML/QuickForm.php"/>
-	<exclude name="lib/HTML/QuickForm/**/*.php"/>
+        <exclude name="lib/HTML/QuickForm.php"/>
+        <exclude name="lib/HTML/QuickForm/**/*.php"/>
       </fileset>
     </phpcodesniffer>
   </target>
