New feature: ServiceCategoryConfiguration (#5492)

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -293,3 +293,8 @@ default:
       paths: [ %paths.base%/features/ContactTemplateConfiguration.feature ]
       contexts:
       - ContactTemplateConfigurationContext
+
+    service_category_configuration:
+      paths: [ %paths.base%/features/ServiceCategoryConfiguration.feature ]
+      contexts:
+      - ServiceCategoryConfigurationContext
