Feature escalation configuration (#5525)
* New feature : EscalationConfiguration

* * fix duplicate name

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -298,3 +298,8 @@ default:
       paths: [ %paths.base%/features/ServiceCategoryConfiguration.feature ]
       contexts:
       - ServiceCategoryConfigurationContext
+
+    escalation_configuration:
+      paths: [ %paths.base%/features/EscalationConfiguration.feature ]
+      contexts:
+      - EscalationConfigurationContext
