New feature MetaServiceConfiguration (#5496)
* New feature MetaServiceConfiguration

* Feature enhanced

* Feature fixed

* * fix duplicate host service dependencies

--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -303,3 +303,8 @@ default:
       paths: [ %paths.base%/features/EscalationConfiguration.feature ]
       contexts:
       - EscalationConfigurationContext
+
+    meta_service_configuration:
+      paths: [ %paths.base%/features/MetaServiceConfiguration.feature ]
+      contexts:
+      - MetaServiceConfigurationContext
