--- a/centreon/behat.yml
+++ b/centreon/behat.yml
@@ -179,11 +179,6 @@ default:
       contexts:
       - ContactConfigurationContext
 
-    contact_group_configuration:
-      paths: [ %paths.base%/features/ContactGroupConfiguration.feature ]
-      contexts:
-      - ContactGroupConfigurationContext
-
     host_configuration:
       paths: [ %paths.base%/features/HostConfiguration.feature ]
       contexts:
@@ -198,6 +193,16 @@ default:
       paths: [ %paths.base%/features/HostGroupConfiguration.feature ]
       contexts:
       - HostGroupConfigurationContext
+
+    contact_group_configuration:
+      paths: [ %paths.base%/features/ContactGroupConfiguration.feature ]
+      contexts:
+      - ContactGroupConfigurationContext
+
+    contact_group_creation_duplication:
+      paths: [ %paths.base%/features/ContactGroupCreationDuplication.feature ]
+      contexts:
+      - ContactGroupCreationDuplicationContext
 
     ldap_configuration:
       paths: [ %paths.base%/features/LdapConfiguration.feature ]
@@ -278,6 +283,11 @@ default:
       paths: [ %paths.base%/features/ServiceGroupConfiguration.feature ]
       contexts:
       - ServiceGroupConfigurationContext
+
+    service_configuration:
+      paths: [ %paths.base%/features/ServiceConfiguration.feature ]
+      contexts:
+      - ServiceConfigurationContext
 
     host_group_service_configuration:
       paths: [ %paths.base%/features/HostGroupServiceConfiguration.feature ]
